Here is the rest of the project please update the readme

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 } */
 
 button {
-  background-color: cyan;
+  /* background-color: cyan; */
   padding: 5px;
   /* box-shadow: 1px 1px 1px gray; */
 }
